Renamed PROJECT_NAME to MODULE_LIBRARY

--- a/scai/common/examples/CMakeLists.txt
+++ b/scai/common/examples/CMakeLists.txt
@@ -45,7 +45,7 @@ endif ( NOT CXX_SUPPORTS_C11 )
 add_library( Module SHARED Module.cpp )
 set ( EXAMPLE_FILES ${EXAMPLE_FILES} Module.cpp )
 set ( EXAMPLE_FILES ${EXAMPLE_FILES} DynRoutine.hpp )
-target_link_libraries( Module ${PROJECT_NAME} )
+target_link_libraries( Module ${MODULE_LIBRARY} )
 
 # example of a library module ( no use of other LAMA stuff )
 add_library( DummyModule SHARED DummyModule.cpp )
@@ -80,7 +80,7 @@ endif ( ${USE_COMPLEX} )
 foreach ( executable ${EXECUTABLE_FILES} )
     add_executable ( ${executable}.exe ${executable}.cpp )
     set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cpp )
-    target_link_libraries ( ${executable}.exe ${PROJECT_NAME} )
+    target_link_libraries ( ${executable}.exe ${MODULE_LIBRARY} )
     set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
 endforeach ( executable )
 
