--- a/scai/hmemo/examples/cuda/CMakeLists.txt
+++ b/scai/hmemo/examples/cuda/CMakeLists.txt
@@ -46,14 +46,14 @@ string (REPLACE ";" " " CUDA_NVCC_FLAGS_CLEAN "${CUDA_NVCC_FLAGS}")
 
 foreach ( executable CUSparseExample CUBlasExample MemBandwidth Prefetch Allocate )
     add_executable( ${executable}.exe ${executable}.cpp )
-    target_link_libraries( ${executable}.exe ${PROJECT_NAME} )
+    target_link_libraries( ${executable}.exe ${MODULE_LIBRARY} )
     set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cpp ) 
     set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
 endforeach ( executable )
 
 foreach ( executable Example1 Example2 Devices CUDABenchContext AliasProblem )
     cuda_add_executable( ${executable}.exe ${executable}.cu )
-    target_link_libraries( ${executable}.exe ${PROJECT_NAME} )
+    target_link_libraries( ${executable}.exe ${MODULE_LIBRARY} )
     set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cu )
     set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
 endforeach ( executable )
