--- a/scai/hmemo/test/cuda/CMakeLists.txt
+++ b/scai/hmemo/test/cuda/CMakeLists.txt
@@ -48,4 +48,4 @@ include_directories ( ${BOOST_INCLUDE_DIR} )
 
 cuda_add_executable ( hmemoCUDATest ${CUDA_SOURCES} ${CXX_SOURCES} )
 
-target_link_libraries ( hmemoCUDATest ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${PROJECT_NAME} )
+target_link_libraries ( hmemoCUDATest ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${MODULE_LIBRARY} )
