--- a/scai/solver/examples/solver/CMakeLists.txt
+++ b/scai/solver/examples/solver/CMakeLists.txt
@@ -36,7 +36,7 @@ set ( HEADER LamaConfig.hpp LamaTiming.hpp )
 
 foreach ( executable lamaSolver lamaInfo matrixStencilGenerator matrixRandomGenerator stencilSolver vectorGenerator )
     add_executable( ${executable}.exe ${executable}.cpp )
-    target_link_libraries( ${executable}.exe ${PROJECT_NAME} )
+    target_link_libraries( ${executable}.exe ${MODULE_LIBRARY} )
     set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cpp )
     set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
 endforeach ( executable )
