--- a/scai/utilskernel/test/CMakeLists.txt
+++ b/scai/utilskernel/test/CMakeLists.txt
@@ -53,7 +53,7 @@ include_directories ( ${Boost_INCLUDE_DIR} )
 
 add_executable ( utilskernelTest ${CXX_SOURCES} )
 
-target_link_libraries ( utilskernelTest ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${PROJECT_NAME} )
+target_link_libraries ( utilskernelTest ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${MODULE_LIBRARY} )
 
 ### Copy the xmltest.sh file in build directory ### 
 
