--- a/scai/blaskernel/test/CMakeLists.txt
+++ b/scai/blaskernel/test/CMakeLists.txt
@@ -44,7 +44,7 @@ include_directories ( ${BOOST_INCLUDE_DIR} )
 
 add_executable ( blaskernelTest ${CXX_SOURCES} )
 
-target_link_libraries ( blaskernelTest ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${PROJECT_NAME} )
+target_link_libraries ( blaskernelTest ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${MODULE_LIBRARY} )
 
 ### Copy the xmltest.sh file in build directory ### 
 
