--- a/scai/solver/examples/spy/CMakeLists.txt
+++ b/scai/solver/examples/spy/CMakeLists.txt
@@ -38,7 +38,7 @@ set ( HEADER Bitmap.hpp )
 
 foreach ( executable spy amg_spy )
     add_executable( ${executable}.exe ${executable}.cpp )
-    target_link_libraries( ${executable}.exe ${PROJECT_NAME} )
+    target_link_libraries( ${executable}.exe ${MODULE_LIBRARY} )
     set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cpp )
     set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
 endforeach ( executable )
