--- a/scai/tasking/test/CMakeLists.txt
+++ b/scai/tasking/test/CMakeLists.txt
@@ -42,7 +42,7 @@ include_directories ( ${BOOST_INCLUDE_DIR} )
 
 add_executable ( taskingTest ${CXX_SOURCES} )
 
-target_link_libraries ( taskingTest ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${PROJECT_NAME} )
+target_link_libraries ( taskingTest ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${MODULE_LIBRARY} )
 
 if    ( CUDA_FOUND AND USE_CUDA )
     add_subdirectory ( cuda )
