--- a/scai/logging/CMakeLists.txt
+++ b/scai/logging/CMakeLists.txt
@@ -27,9 +27,9 @@
  # Fraunhofer SCAI. Please contact our distributor via info[at]scapos.com.
  # @endlicense
  #
- # @brief CMake configuration file for Logging library
+ # @brief CMake configuration file for SCAI module logging
  # @author Thomas Brandes
- # @date 09.06.2015
+ # @date 04.07.2017
 ###
 
 ## Define name of the SCAI module project
@@ -60,51 +60,15 @@ scai_project (
 
 ## add subdirectories
 
-scai_subdirectories( EXAMPLES macros )
-
-## begin subdir test
-# prepare test
-
-if ( USE_CODE_COVERAGE )
-
-    configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/test/code_coverage.sh.in" 
-                     "${CMAKE_CURRENT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/test/code_coverage.sh"
-                     @ONLY )
-
-    file ( COPY ${CMAKE_CURRENT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/test/code_coverage.sh 
-           DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/test
-           FILE_PERMISSIONS ${PROJECT_FILE_PERMISSIONS} )
-
-    file ( COPY ${CMAKE_CURRENT_SOURCE_DIR}/../scai_code_coverage_functions.sh 
-           DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/test
-           FILE_PERMISSIONS ${PROJECT_FILE_PERMISSIONS} )
-
-endif ( USE_CODE_COVERAGE )
-
-configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/test/make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/test/make.inc" )
-
-set ( TEST_FILES Makefile README complexLogging.cpp simpleLogging.cpp test.sh )
-foreach    ( TEST_FILE ${TEST_FILES} )
-    file ( COPY ${CMAKE_CURRENT_SOURCE_DIR}/test/${TEST_FILE}
-           DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/test
-           FILE_PERMISSIONS ${PROJECT_FILE_PERMISSIONS} )
-endforeach ( TEST_FILE ${TEST_FILES} )
-
-# add test
-
-enable_testing()
-add_test ( logging_test test/test.sh )
-## end subdir test
-
-### set link directories ###
-if ( WIN32 )
-  link_directories ( ${Boost_LIBRARY_DIRS} )
-endif ( WIN32 )
+scai_subdirectories ( EXAMPLES macros TEST )
 
 ## Define library via macro using MODULE_NAME, INTERNAL_DEPS, EXTERNAL_DEPS
 ## and global variables SCAI_LIBRARY_PREFIX, SCAI_VERSION, ....
 
-scai_library ()
+scai_library ( PREFIX  ${SCAI_LIBRARY_PREFIX}
+               TYPE    ${SCAI_LIBRARY_TYPE}
+               VERSION ${SCAI_VERSION}
+               ${CXX_SOURCES} )
 
 ### install ###
 
