--- a/scai/common/CMakeLists.txt
+++ b/scai/common/CMakeLists.txt
@@ -27,9 +27,9 @@
  # Fraunhofer SCAI. Please contact our distributor via info[at]scapos.com.
  # @endlicense
  #
- # @brief CMake configuration file for common library
+ # @brief CMake configuration file for SCAI module common
  # @author Thomas Brandes
- # @date 01.07.2017
+ # @date 04.07.2017
 ###
 
 scai_module(
@@ -208,7 +208,10 @@ endif ( WIN32 )
 ## Define library via macro using MODULE_NAME, INTERNAL_DEPS, EXTERNAL_DEPS
 ## and global variables SCAI_LIBRARY_PREFIX, SCAI_VERSION, ....
 
-scai_library ()
+scai_library ( PREFIX  ${SCAI_LIBRARY_PREFIX}
+               TYPE    ${SCAI_LIBRARY_TYPE}
+               VERSION ${SCAI_VERSION}
+               ${CXX_SOURCES} )
 
 ### install ###
 
