--- a/scai/dmemo/CMakeLists.txt
+++ b/scai/dmemo/CMakeLists.txt
@@ -27,9 +27,9 @@
  # Fraunhofer SCAI. Please contact our distributor via info[at]scapos.com.
  # @endlicense
  #
- # @brief CMake specification file for project dmemo (distributed memory)
+ # @brief CMake configuration file for SCAI module dmemo (distributed memory)
  # @author Thomas Brandes
- # @date 16.02.2016
+ # @date 04.07.2017
 ###
 
 ## Define name of the SCAI module project
@@ -99,7 +99,10 @@ endif ( WIN32 )
 ## Define library via macro using MODULE_NAME, INTERNAL_DEPS, EXTERNAL_DEPS
 ## and global variables SCAI_LIBRARY_PREFIX, SCAI_VERSION, ....
 
-scai_library ()
+scai_library ( PREFIX  ${SCAI_LIBRARY_PREFIX}
+               TYPE    ${SCAI_LIBRARY_TYPE}
+               VERSION ${SCAI_VERSION}
+               ${CXX_SOURCES} )
 
 ### install ###
 
